--- a/vue基础/demo/musicPlayer.html
+++ b/vue基础/demo/musicPlayer.html
@@ -32,7 +32,11 @@
         <div id="main">
           <img :src="songsImg" id="songsImgs">
         </div>
-        <div id="right"></div>
+        <div id="right">
+          <ul id="">
+            <li>歌曲评论</li>
+          </ul>
+        </div>
       </div>
       <div id="audioDiv">
         <audio :src="audioUrl" ref="audio" id="audio" controls="controls" autoplay="autoplay"></audio>
